fix : overflow css fix

--- a/host/src/acoe.css
+++ b/host/src/acoe.css
@@ -1,5 +1,31 @@
 @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 
+/* Set the width and height of the scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+/* Set the background color of the scrollbar */
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+/* Set the color and rounded corners of the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #E8EBF1;
+  border-radius: 10px;
+  -webkit-border-radius : 9px;
+  /* border : 6px solid transparent; */
+  background-clip : content-box;
+  opacity: 0.2;
+}
+
+/* Set the color of the scrollbar thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #E8EBF1;
+}
+
 .flex-row {
   display: flex;
   flex-direction: row;
@@ -443,7 +469,7 @@
   height: 85px;
   top: calc(50% - 50px);
   border-radius: 0px 12px 12px 0px;
-  z-index: 3;
+  z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -457,7 +483,7 @@
 
 
 .openButton.openState2 {
-  left: 700px;
+  left: 698px;
 }
 
 
@@ -749,7 +775,7 @@
 
 .cafe-list {
   overflow-y: auto;
-  height: 100%;
+  height: 70%;
   margin-left: 16px;
   -ms-overflow-style: none;
   /* IE and Edge */
